# AudioBooQer

./: CMakeLists.txt  README.md
AudioBooQer/: CMakeLists.txt
AudioBooQer/audiobook/: CMakeLists.txt
AudioBooQer/audiobook/include/: AacEncoder.h  AacFormat.h  AdtsParser.h  BookBinder.h  IAudioEncoder.h  Mp4Tag.h  Mpeg4Audio.h  Output.h  RawEncoder.h
AudioBooQer/audiobook/src/: AacEncoder.cpp  AacFormat.cpp  AdtsParser.cpp  IAudioEncoder.cpp  Mp4Tag.cpp  Mpeg4Audio.cpp  Output.cpp  RawEncoder.cpp
AudioBooQer/audiobook/tests/: CMakeLists.txt
AudioBooQer/docs/: References.md
AudioBooQer/forms/: WBookBinder.ui  WTagEditor.ui  waudioformat.ui  wmainwindow.ui
AudioBooQer/include/: BookBinderModel.h  WBookBinder.h  WTagEditor.h  aacencoder.h  aacformat.h  adts.h  audiojob.h  chaptermodel.h  iaudioencoder.h  job.h  mp4tag.h  mpeg4_asc.h  mpeg4audio.h  output.h  output_adts.h  rawencoder.h  waudioformat.h  waudioplayer.h  wjobinfo.h  wmainwindow.h
AudioBooQer/src/: BookBinderModel.cpp  WBookBinder.cpp  WTagEditor.cpp  aacencoder.cpp  aacformat.cpp  adts.cpp  audiojob.cpp  chapter.cpp  chaptermodel.cpp  iaudioencoder.cpp  job.cpp  mp4tag.cpp  mpeg4audio.cpp  output.cpp  output_adts.cpp  rawencoder.cpp  waudioformat.cpp  waudioplayer.cpp  wjobinfo.cpp  wmainwindow.cpp
AudioBooQer/tests/: CMakeLists.txt
AudioBooQer/tests/src/: test_adts.cpp
AudioBooQer/ui/: CMakeLists.txt
AudioBooQer/ui/forms/: WAudioFormat.ui  WAudioPlayer.ui  WBookBinder.ui  WMainWindow.ui  WTagEditor.ui
AudioBooQer/ui/include/: AudioBuffer.h  AudioJob.h  BinderIO.h  BookBinderModel.h  Chapter.h  ChapterModel.h  Job.h  MiniJob.h  Settings.h  WAudioPlayer.h  WBookBinder.h  WChapterList.h  WJobInfo.h  WMainWindow.h  WTagEditor.h
AudioBooQer/ui/resources/: resources.qrc
AudioBooQer/ui/src/: AudioBuffer.cpp  AudioJob.cpp  BinderIO.cpp  BookBinderModel.cpp  Chapter.cpp  ChapterModel.cpp  Job.cpp  MiniJob.cpp  Settings.cpp  WAudioFormat.cpp  WAudioPlayer.cpp  WBookBinder.cpp  WChapterList.cpp  WJobInfo.cpp  WMainWindow.cpp  WTagEditor.cpp  main.cpp
